addition features, unit tests

--- a/src/Components/Pages/Home/Home.razor
+++ b/src/Components/Pages/Home/Home.razor
@@ -1,12 +1,15 @@
 @inherits BaseComponent<Home.Model>
 
 <div class="home-page">
-    <div class="banner">
-        <div class="container">
-            <h1 class="logo-font">conduit</h1>
-            <p>A place to share your knowledge.</p>
+    @if (!Props.IsAuthenticated)
+    {
+        <div class="banner">
+            <div class="container">
+                <h1 class="logo-font">conduit</h1>
+                <p>A place to share your knowledge.</p>
+            </div>
         </div>
-    </div>
+    }
 
     <div class="container page">
         <div class="row">
