--- a/src/Components/Pages/Article/Article.razor
+++ b/src/Components/Pages/Article/Article.razor
@@ -6,20 +6,35 @@
             <h1>@Props.Article.Title</h1>
 
             <div class="article-meta">
-                <a href="/profile/@Props.Article.Author.Username"><img src="@Props.Article.Author.Image" /></a>
+                <a href="/profile/@Props.Article.Author.Username">
+                    <img src="@Props.Article.Author.Image"/>
+                </a>
                 <div class="info">
                     <a href="/profile/@Props.Article.Author.Username" class="author">@Props.Article.Author.Username</a>
                     <span class="date">@Props.Article.UpdatedAt.ToString("MMMM d, yyyy")</span>
                 </div>
-                <button class="btn btn-sm btn-outline-secondary">
-                    <i class="ion-plus-round"></i>
-                    &nbsp; Follow @Props.Article.Author.Username
-                </button>
-                &nbsp;&nbsp;
-                <button class="btn btn-sm btn-outline-primary">
-                    <i class="ion-heart"></i>
-                    &nbsp; Favorite Article <span class="counter">(@Props.Article.FavoritesCount)</span>
-                </button>
+                @if (Props.IsAuthor)
+                {
+                    <button class="btn btn-sm btn-outline-secondary">
+                        <i class="ion-edit"></i> Edit Article
+                    </button>
+                    <button class="btn btn-sm btn-outline-danger">
+                        <i class="ion-trash-a"></i> Delete Article
+                    </button>
+                }
+                else
+                {
+                    <button class="btn btn-sm btn-outline-secondary">
+                        <i class="ion-plus-round"></i>
+                        &nbsp; Follow @Props.Article.Author.Username
+                    </button>
+
+                    <button class="btn btn-sm btn-outline-primary">
+                        <i class="ion-heart"></i>
+                        &nbsp; Favorite Article <span class="counter">(@Props.Article.FavoritesCount)</span>
+                    </button>
+                }
+
             </div>
         </div>
     </div>
@@ -32,108 +47,24 @@
                 <ul class="tag-list">
                     @foreach (var tag in Props.Article.TagList)
                     {
-                    <li class="tag-default tag-pill tag-outline">@tag</li>
+                        <li class="tag-default tag-pill tag-outline">@tag</li>
                     }
                 </ul>
             </div>
         </div>
 
-        <hr />
-        @if (!Props.IsAuthenticated)
-        {
-            <div class="row" hx-boost="true">
-                <div class="col-xs-12 col-md-8 offset-md-2">
-                    <p>
-                        <a href="/login">Sign in</a>&nbsp; or &nbsp;
-                        <a href="/register">Sign up</a>&nbsp; to add comments on this article.
-                    </p>
-                </div>
-            </div>
-        }
-        else
-        {
-                    <div class="article-actions">
-            <div class="article-meta">
-                <a href="profile.html"><img src="http://i.imgur.com/Qr71crq.jpg" /></a>
-                <div class="info">
-                    <a href="" class="author">Eric Simons</a>
-                    <span class="date">January 20th</span>
-                </div>
-
-                <button class="btn btn-sm btn-outline-secondary">
-                    <i class="ion-plus-round"></i>
-                    &nbsp; Follow Eric Simons
-                </button>
-                &nbsp;
-                <button class="btn btn-sm btn-outline-primary">
-                    <i class="ion-heart"></i>
-                    &nbsp; Favorite Article <span class="counter">(29)</span>
-                </button>
-                <button class="btn btn-sm btn-outline-secondary">
-                    <i class="ion-edit"></i> Edit Article
-                </button>
-                <button class="btn btn-sm btn-outline-danger">
-                    <i class="ion-trash-a"></i> Delete Article
-                </button>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-12 col-md-8 offset-md-2">
-                <form class="card comment-form">
-                    <div class="card-block">
-                        <textarea class="form-control" placeholder="Write a comment..." rows="3"></textarea>
-                    </div>
-                    <div class="card-footer">
-                        <img src="http://i.imgur.com/Qr71crq.jpg" class="comment-author-img" />
-                        <button class="btn btn-sm btn-primary">Post Comment</button>
-                    </div>
-                </form>
-
-                <div class="card">
-                    <div class="card-block">
-                        <p class="card-text">
-                            With supporting text below as a natural lead-in to additional content.
-                        </p>
-                    </div>
-                    <div class="card-footer">
-                        <a href="/profile/author" class="comment-author">
-                            <img src="http://i.imgur.com/Qr71crq.jpg" class="comment-author-img" />
-                        </a>
-                        &nbsp;
-                        <a href="/profile/jacob-schmidt" class="comment-author">Jacob Schmidt</a>
-                        <span class="date-posted">Dec 29th</span>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="card-block">
-                        <p class="card-text">
-                            With supporting text below as a natural lead-in to additional content.
-                        </p>
-                    </div>
-                    <div class="card-footer">
-                        <a href="/profile/author" class="comment-author">
-                            <img src="http://i.imgur.com/Qr71crq.jpg" class="comment-author-img" />
-                        </a>
-                        &nbsp;
-                        <a href="/profile/jacob-schmidt" class="comment-author">Jacob Schmidt</a>
-                        <span class="date-posted">Dec 29th</span>
-                        <span class="mod-options">
-              <i class="ion-trash-a"></i>
-            </span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        }
+        <hr/>
 
     </div>
 </div>
 
 @code {
-    public record Model(bool IsAuthenticated, RealworldBlazorHtmx.App.ServiceClient.Article Article) : BaseComponentProps;
-    
-    private static string GetHtml(string markdown) =>  Markdown.ToHtml(markdown);
+
+    public record Model(bool IsAuthenticated, ServiceClient.Article Article, bool IsAuthor) : BaseComponentProps;
+
+    private static string GetHtml(string markdown)
+    {
+        return Markdown.ToHtml(markdown);
+    }
 
 }
