--- a/src/Components/Pages/Article/Article.razor
+++ b/src/Components/Pages/Article/Article.razor
@@ -1,6 +1,7 @@
 @using Markdig
+@using RealworldBlazorHtmx.App.ServiceClient
 @inherits BaseComponent<Article.Model>
-<div class="article-page">
+<div class="article-page" id="articlepage">
     <div class="banner">
         <div class="container">
             <h1>@Props.Article.Title</h1>
@@ -13,7 +14,7 @@
                     <a href="/profile/@Props.Article.Author.Username" class="author">@Props.Article.Author.Username</a>
                     <span class="date">@Props.Article.UpdatedAt.ToString("MMMM d, yyyy")</span>
                 </div>
-                @if (Props.IsAuthor)
+                @if (Props.User is not null && Props.User.Username == Props.Article.Author.Username)
                 {
                     <button class="btn btn-sm btn-outline-secondary">
                         <i class="ion-edit"></i> Edit Article
@@ -24,15 +25,24 @@
                 }
                 else
                 {
-                    <button class="btn btn-sm btn-outline-secondary">
-                        <i class="ion-plus-round"></i>
-                        &nbsp; Follow @Props.Article.Author.Username
-                    </button>
+                    <ArticleAuthor Props="@(new ArticleAuthor.Model(Props.Article.Author))"></ArticleAuthor>
+                    
+                    @if (Props.Article.Favorited)
+                    {
+                        <button class="btn btn-sm btn-primary" hx-delete="/article/@Props.Article.Slug/favorite" hx-target="#articlepage">
+                            <i class="ion-heart"></i>
+                            Unfavorite Article <span class="counter">(@Props.Article.FavoritesCount)</span>
+                        </button>
+                    }
+                    else
+                    {
+                        <button class="btn btn-sm btn-outline-primary" hx-post="/article/@Props.Article.Slug/favorite" hx-target="#articlepage">
+                            <i class="ion-heart"></i>
+                            Favorite Article <span class="counter">(@Props.Article.FavoritesCount)</span>
+                        </button>
+                    }
 
-                    <button class="btn btn-sm btn-outline-primary">
-                        <i class="ion-heart"></i>
-                        &nbsp; Favorite Article <span class="counter">(@Props.Article.FavoritesCount)</span>
-                    </button>
+                    
                 }
 
             </div>
@@ -54,17 +64,26 @@
         </div>
 
         <hr/>
-
+        @if (Props is {IsAuthenticated: true, User: not null})
+        {
+            <div class="col-xs-12 col-md-8 offset-md-2">
+                <div hx-get="/article/@Props.Article.Slug/comments" hx-trigger="load" id="commentlist"></div>
+            </div>
+        }
+        
     </div>
 </div>
 
 @code {
 
-    public record Model(bool IsAuthenticated, ServiceClient.Article Article, bool IsAuthor) : BaseComponentProps;
+    public record Model(bool IsAuthenticated, ServiceClient.Article Article, User? User) : BaseComponentProps;
 
     private static string GetHtml(string markdown)
     {
-        return Markdown.ToHtml(markdown);
+        var pipeline = new MarkdownPipelineBuilder()
+            .UseSoftlineBreakAsHardlineBreak()
+            .Build();
+        return Markdown.ToHtml(markdown, pipeline);
     }
 
 }
