--- a/src/Components/Shared/Header/AppHeader.razor
+++ b/src/Components/Shared/Header/AppHeader.razor
@@ -36,9 +36,9 @@ else
                     <a class="nav-link @IsActivePath("/settings")" href="/settings"> <i class="ion-gear-a"></i>Settings</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/profile/@Props.User.Username">
-                        <img src="@Props.User.Image" class="user-pic"/>
-                        @Props.User.Username
+                    <a class="nav-link" href="/profile/@Props.User?.Username">
+                        <img src="@Props.User?.Image" class="user-pic"/>
+                        @Props.User?.Username
                     </a>
                 </li>
             </ul>
