--- a/src/Components/Pages/Register/RegisterForm.razor
+++ b/src/Components/Pages/Register/RegisterForm.razor
@@ -1,7 +1,7 @@
 @using RealworldBlazorHtmx.App.Components.Shared
 @inherits BaseComponent<RegisterForm.Model>
 
-<ListErrors ErrorList="Props.ErrorList"/>
+<ListErrors ErrorList="Props?.ErrorList"/>
 
 <form hx-post="/register" hx-include="[username='Username'],[name='Email'],[name='Password']">
     <fieldset class="form-group">
