--- a/src/Components/Pages/Settings/Settings.razor
+++ b/src/Components/Pages/Settings/Settings.razor
@@ -6,10 +6,7 @@
         <div class="row">
             <div class="col-md-6 offset-md-3 col-xs-12">
                 <h1 class="text-xs-center">Your Settings</h1>
-
-                <ul class="error-messages">
-                    <li>That name is required</li>
-                </ul>
+                
 
                 <form>
                     <fieldset>
@@ -39,7 +36,7 @@
                     </fieldset>
                 </form>
                 <hr/>
-                <button class="btn btn-outline-danger">Or click here to logout.</button>
+                <button class="btn btn-outline-danger" hx-post="/settings/logout">Or click here to logout.</button>
             </div>
         </div>
     </div>
