--- a/src/Components/Shared/Articles/ArticleSummary.razor
+++ b/src/Components/Shared/Articles/ArticleSummary.razor
@@ -1,5 +1,5 @@
 @using RealworldBlazorHtmx.App.ServiceClient
-<div class="article-preview" hx-boost="true">
+<div class="article-preview">
     <div class="article-meta">
         <NavLink href=@($"/profile/?author={Article.Author.Username}")>
             <img src="@Article.Author.Image" alt="@Article.Author.Username"/>
