--- a/src/Components/Shared/Articles/Articles.razor
+++ b/src/Components/Shared/Articles/Articles.razor
@@ -1,5 +1,5 @@
 @inherits BaseComponent<Articles.Model>
-<div hx-boost="true">
+<div>
     <div class="articles-toggle" id="feed-toggle">
         <ul class="nav nav-pills outline-active">
             @if (Props.Filter.Author is not null || Props.Filter.Favorited is not null)
