--- a/src/Components/Pages/Home/Tags.razor
+++ b/src/Components/Pages/Home/Tags.razor
@@ -3,7 +3,7 @@
 <div class="sidebar">
     <p>Popular Tags</p>
 
-    <div class="tag-list" id="taglist" hx-boost="true">
+    <div class="tag-list" id="taglist">
         @foreach (var tag in Props.Tags)
         {
             <a class="tag-default tag-pill" href="?page=1&tag=@tag">@tag</a>
