--- a/src/Components/Shared/Header/AppHeader.razor
+++ b/src/Components/Shared/Header/AppHeader.razor
@@ -6,7 +6,7 @@
     <nav class="navbar navbar-light">
         <div class="container">
             <a class="navbar-brand" href="/">conduit</a>
-            <ul class="nav navbar-nav pull-xs-right" hx-boost="true">
+            <ul class="nav navbar-nav pull-xs-right">
                 <li class="nav-item">
                     <a class="nav-link @IsActivePath("/")" href="/">Home</a>
                 </li>
